--- a/css/styles.css
+++ b/css/styles.css
@@ -1,193 +1,245 @@
-:root{
-    --primary-text-color: #757575;
-    --title-text-color: #212121;
-    --accent-color: #2196F3;
+:root {
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
 }
 
 body {
-    background-color: #ffffff;
-    color: var(--primary-text-color);
-    font-family: 'Roboto', sans-serif;
+  background-color: #ffffff;
+  color: var(--primary-text-color);
+  font-family: 'Roboto', sans-serif;
 }
 button {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    text-align: center;
-    letter-spacing: 0.03em;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  letter-spacing: 0.03em;
+  min-width: 73px;
+  border: 0;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 a {
-    Text-decoration: none;
+  text-decoration: none;
+  display: block;
 }
 ul {
-    list-style: none;
+  list-style: none;
+  margin: 0;
+  display: block;
+  padding: 0;
+}
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-/* logo */
+/* --------------------------logo-------------------------- */
 
 .logo {
-    color: var(--accent-color);
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.1923;
-    letter-spacing: 0.03em;
+  color: var(--accent-color);
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.1923;
+  letter-spacing: 0.03em;
 }
-.header-logo-ending{
-    color: #000000;
+.header-logo-ending {
+  color: #000000;
 }
-.header-logo-ending:hover, .header-logo-ending:focus {
-    color: var(--accent-color);
-}
-
-/* site-nav */
-
-.site-nav a{
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1428;
-    letter-spacing: 0.02em;
-}
-.site-nav a:hover, .site-nav a:focus{
-    color: var(--accent-color);
-}
-.site-nav .current{
-    color: var(--accent-color);
-}
-.auth-nav .button{
-    color: var(--primary-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1428;
-    letter-spacing: 0.02em;
-}
-.auth-nav .button:hover, .button:focus{
-    color: var(--accent-color);
+.header-logo-ending:hover,
+.header-logo-ending:focus {
+  color: var(--accent-color);
 }
 
-/* main */
-/* hero */
+/* --------------------------site-nav-------------------------- */
 
-.hero{
-    background-color: #2F303A;
+.site-nav a {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1428;
+  letter-spacing: 0.02em;
 }
-.hero-title{
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.3636;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: #FFFFFF;
+.site-nav a:hover,
+.site-nav a:focus {
+  color: var(--accent-color);
 }
-.hero .button{
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.875;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
+.site-nav .current {
+  color: var(--accent-color);
+}
+.auth-nav .button {
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1428;
+  letter-spacing: 0.02em;
+}
+.auth-nav .button:hover,
+.button:focus {
+  color: var(--accent-color);
+}
 
-    background-color: var(--accent-color);
-    cursor: pointer;
+/* --------------------------main-------------------------- */
+/* --------------------------hero-------------------------- */
+
+.hero {
+  background-color: #2f303a;
+
+  margin-bottom: 94px;
+}
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.3636;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
+
+  padding-top: 200px;
+  padding-bottom: 32px;
+}
+.hero .button {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  /* display: flex; */
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  cursor: pointer;
+
+  padding: 10px 32px;
+  margin-bottom: 198px;
 }
 .hero .button:hover,
-.hero .button:focus{
-    background-color: #188CE8;
+.hero .button:focus {
+  background-color: #188ce8;
 }
-.section-title{
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.1666;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1666;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+
+  margin-bottom: 50px;
 }
-.peculiarities .title{
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.1428;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--title-text-color);
+.section-list {
+  padding-bottom: 94px;
 }
-.peculiarities .text{
-    font-size: 14px;
-    line-height: 1.7142;
-    letter-spacing: 0.03em;
+.peculiarities .title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--title-text-color);
 }
-.team{
-    background-color: #F5F4FA;
+.peculiarities .text {
+  font-size: 14px;
+  line-height: 1.7142;
+  letter-spacing: 0.03em;
 }
-.team .title{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.1875;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
+.team {
+  background-color: #f5f4fa;
 }
-.team .text{
-    font-size: 16px;
-    line-height: 1.1875;
-    letter-spacing: 0.03em;
+.team .section-title {
+  padding-top: 94px;
+}
+.team .title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1875;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+.team .text {
+  font-size: 16px;
+  line-height: 1.1875;
+  letter-spacing: 0.03em;
 }
 
-/* footer */
+/* --------------------------footer-------------------------- */
 
-footer{
-    background-color: #2F303A;
+footer {
+  background-color: #2f303a;
 }
 
-/* logo */
+/* --------------------------footer logo-------------------------- */
 
-.footer-logo-ending{
-    color: #ffffff;
+.footer .logo {
+  padding-top: 60px;
+  margin-bottom: 20px;
 }
-.footer-logo-ending:hover, .footer-logo-ending:focus {
-    color: var(--accent-color);
+.footer-logo-ending {
+  color: #ffffff;
 }
-
-/* address */
-
-.address-list{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7142;
-    letter-spacing: 0.03em;
-    font-style: normal;
-}
-.address-list a{
-    color: rgba(255, 255, 255, 0.6);
-}
-.address-list a:hover, .address-list a:focus{
-    color: var(--accent-color);
-}
-.address-list .map-link{
-    color: #ffffff;
+.footer-logo-ending:hover,
+.footer-logo-ending:focus {
+  color: var(--accent-color);
 }
 
-/* portfolio.html */
-/* main */
+/* --------------------------address-------------------------- */
 
+.address-list {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7142;
+  letter-spacing: 0.03em;
+  font-style: normal;
+
+  padding-bottom: 60px;
+}
+.address-list a {
+  color: rgba(255, 255, 255, 0.6);
+}
+.address-list a:hover,
+.address-list a:focus {
+  color: var(--accent-color);
+}
+.address-list .map-link {
+  color: #ffffff;
+}
+
+/* --------------------------portfolio.html-------------------------- */
+/* --------------------------main portfolio-------------------------- */
+.portfolio .button {
+  padding: 6px 22px;
+}
 .portfolio .button:hover,
 .portfolio .button:focus {
-    color: #ffffff;
-    background-color: var(--accent-color);
-    cursor: pointer;
+  color: #ffffff;
+  background-color: var(--accent-color);
+  cursor: pointer;
 }
-.portfolio .title{
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: var(--title-text-color);
+.portfolio .title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--title-text-color);
 }
-.portfolio .text{
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.03em;
+.portfolio .text {
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
 }
