--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,9 @@ ul {
   display: block;
   padding: 0;
 }
+img {
+  display: block;
+}
 .container {
   width: 1200px;
   margin-left: auto;
@@ -48,9 +51,18 @@ ul {
   padding-right: 15px;
 }
 
+/* --------------------------header-------------------------- */
 /* --------------------------logo-------------------------- */
 
+.header {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ececec;
+}
 .logo {
+  display: flex;
+  margin-right: 93px;
+
   color: var(--accent-color);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -61,13 +73,19 @@ ul {
 .header-logo-ending {
   color: #000000;
 }
-.header-logo-ending:hover,
+/* .header-logo-ending:hover,
 .header-logo-ending:focus {
   color: var(--accent-color);
-}
+} */
 
 /* --------------------------site-nav-------------------------- */
 
+.site-nav {
+  display: flex;
+  gap: 50px;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
 .site-nav a {
   color: var(--title-text-color);
   font-weight: 500;
@@ -81,6 +99,11 @@ ul {
 }
 .site-nav .current {
   color: var(--accent-color);
+}
+.auth-nav {
+  display: flex;
+  margin-left: auto;
+  gap: 50px;
 }
 .auth-nav .button {
   color: var(--primary-text-color);
@@ -96,55 +119,79 @@ ul {
 
 /* --------------------------main-------------------------- */
 /* --------------------------hero-------------------------- */
-
-.hero {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.section.hero {
+  padding-top: 0;
+  padding-bottom: 0;
+  text-align: center;
   background-color: #2f303a;
-
-  margin-bottom: 94px;
+}
+.hero-container {
+  max-width: 696px;
 }
 .hero-title {
+  padding-top: 200px;
+  padding-bottom: 32px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.3636;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-
-  padding-top: 200px;
-  padding-bottom: 32px;
 }
 .hero .button {
+  padding: 10px 32px;
+  margin-bottom: 200px;
+
   color: #ffffff;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
   /* display: flex; */
   align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   background-color: var(--accent-color);
   cursor: pointer;
-
-  padding: 10px 32px;
-  margin-bottom: 198px;
 }
 .hero .button:hover,
 .hero .button:focus {
   background-color: #188ce8;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .section-title {
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1666;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-
-  margin-bottom: 50px;
 }
-.section-list {
-  padding-bottom: 94px;
+.section-list .title {
+  margin-bottom: 10px;
+}
+.peculiarities .section-list {
+  display: flex;
+  gap: 30px;
+}
+.peculiarities-item {
+  width: calc((100% - 90px) / 4);
 }
 .peculiarities .title {
   font-weight: 700;
@@ -159,11 +206,35 @@ ul {
   line-height: 1.7142;
   letter-spacing: 0.03em;
 }
+.section.works {
+  padding-top: 0;
+}
+.container .works {
+  display: flex;
+  gap: 30px;
+}
+.works-item {
+  width: calc((100% - 60px) / 3);
+}
 .team {
   background-color: #f5f4fa;
 }
-.team .section-title {
-  padding-top: 94px;
+
+.team .section-list {
+  display: flex;
+  gap: 30px;
+}
+.team-item {
+  width: calc((100% - 90px) / 4);
+  background: #ffffff;
+  text-align: center;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-item-about {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .team .title {
   font-weight: 500;
@@ -189,25 +260,27 @@ footer {
 .footer .logo {
   padding-top: 60px;
   margin-bottom: 20px;
+  display: inline-block;
 }
 .footer-logo-ending {
   color: #ffffff;
 }
-.footer-logo-ending:hover,
+/* .footer-logo-ending:hover,
 .footer-logo-ending:focus {
   color: var(--accent-color);
-}
+} */
 
 /* --------------------------address-------------------------- */
 
 .address-list {
+  display: inline-block;
+  padding-bottom: 60px;
+
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7142;
   letter-spacing: 0.03em;
   font-style: normal;
-
-  padding-bottom: 60px;
 }
 .address-list a {
   color: rgba(255, 255, 255, 0.6);
@@ -218,10 +291,21 @@ footer {
 }
 .address-list .map-link {
   color: #ffffff;
+  margin-bottom: 9px;
+}
+.mail-link {
+  margin-bottom: 9px;
 }
 
 /* --------------------------portfolio.html-------------------------- */
 /* --------------------------main portfolio-------------------------- */
+
+.portfolio-list {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 50px;
+}
 .portfolio .button {
   padding: 6px 22px;
 }
@@ -237,6 +321,22 @@ footer {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
+}
+.section-list.portfolio {
+  flex-wrap: wrap;
+  display: flex;
+  gap: 30px;
+}
+.portfolio-item {
+  width: calc((100% - 60px) / 3);
+}
+.portfolio-item-about {
+  background: #ffffff;
+
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  padding: 20px 24px;
 }
 .portfolio .text {
   font-size: 16px;
