--- a/css/styles.css
+++ b/css/styles.css
@@ -53,14 +53,15 @@ img {
 /* --------------------------header-------------------------- */
 /* --------------------------logo-------------------------- */
 
-.header {
+header {
+  border-bottom: 1px solid #ececec;
+}
+.container.header {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #ececec;
 }
 .logo {
   display: flex;
-  margin-right: 93px;
 
   color: var(--accent-color);
   font-family: 'Raleway', sans-serif;
@@ -68,6 +69,9 @@ img {
   font-size: 26px;
   line-height: 1.1923;
   letter-spacing: 0.03em;
+}
+.header .logo {
+  margin-right: 93px;
 }
 .header-logo-ending {
   color: #000000;
@@ -126,16 +130,16 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .section.hero {
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   text-align: center;
   background-color: #2f303a;
 }
 .hero-container {
   max-width: 696px;
-  padding-top: 200px;
-  padding-bottom: 200px;
 }
 .hero-title {
   margin-bottom: 32px;
@@ -246,16 +250,14 @@ img {
 /* --------------------------footer-------------------------- */
 
 footer {
-  background-color: #2f303a;
-}
-.container.footer {
   padding-top: 60px;
   padding-bottom: 60px;
+  background-color: #2f303a;
 }
 
 /* --------------------------footer logo-------------------------- */
 
-.footer .logo {
+footer .logo {
   margin-bottom: 20px;
   display: inline-block;
 }
@@ -308,6 +310,8 @@ footer {
   cursor: pointer;
 }
 .portfolio .title {
+  margin-bottom: 4px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
